--- a/Matching Game FEND/index.html
+++ b/Matching Game FEND/index.html
@@ -35,7 +35,7 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
+                <img src="img/antelope.jpg" class="fa fa-diamond">
             </li>
             <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
@@ -59,7 +59,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
+                <img src="img/antelope.jpg" class="fa fa-diamond">
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
@@ -84,23 +84,25 @@
             </li>
         </ul>
 
-        <div id="popup_menu" class="overlay">
-            <div class="popup">
+        <div id="winner_panel" class="layer">
+            <div class="winner">
+                <h2>Congratulations</h2>
                 <a class="close" href=# >×</a>
-                <div class="congrats">
-                    Congratulations, you are the winner!
+                <div class="content-1">
+                    You are the winner!
                 </div>
-                <div class="score">
-                    <p>Moves: <span id=finalMove> </span> moves </p>
+                <div class="content-2">
+                    <p>Moves<span id=finalMove> </span> moves </p>
                     <p>Total time: <span id=totalTime> </span> </p>
-                    <p>Rating: <span id="starRating"></span></p>
+                    <p>Rating:  <span id=starRating></span></p>
                 </div>
-                <button id="play-again" onclick="playAgain()">
-                    PLAY AGAIN
+                <button id="play-again"onclick="playAgain()">
+                    Play again
                 </button>
             </div>
         </div>
 
+</div>
  
     <script src="js/app.js"></script>
 </body>
