--- a/Matching Game FEND/index.html
+++ b/Matching Game FEND/index.html
@@ -1,107 +1,172 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
-    <meta name="deatchingscription" content="">
+    <meta name="description" content="FEND Udacity Matching Game Project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
-
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
-
-        	<span class="moves">0</span> Move(s)
-
-            <div class="timer">
-            </div>
-
-            <div class="restart" onclick=startGame()>
-        		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
-
-        <ul class="deck" id="card-deck">
-            <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card" type="plane">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match" type="anchor">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card" type="bolt" >
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card" type="cube">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match" type="anchor">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card" type="leaf">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card" type="bicycle">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card" type="bomb">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card" type="leaf">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card" type="bomb">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show" type="bolt">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card" type="bicycle">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card" type="plane">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card" type="cube">
-                <i class="fa fa-cube"></i>
-            </li>
+      <header>
+        <h1>Matching Game</h1>
+      </header>
+      <section class="score-panel">
+        <ul class="stars">
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
         </ul>
-
-        <div id="popup_menu" class="overlay">
-            <div class="popup">
-                <a class="close" href=# >×</a>
-                <div class="congrats">
-                    Congratulations, you are the winner!
-                </div>
-                <div class="score">
-                    <p>Moves: <span id=finalMove> </span> moves </p>
-                    <p>Total time: <span id=totalTime> </span> </p>
-                    <p>Rating: <span id="starRating"></span></p>
-                </div>
-                <button id="play-again" onclick="playAgain()">
-                    PLAY AGAIN
-                </button>
-            </div>
+        <span class="moves">
+          <p class="moves_count">Moves: 0</p>
+        </span>
+        <div class="timer">
+          <p class="time_tracker"><span>time</span> 00 : 00</p>
         </div>
-
- 
+        <button id="restart" type="button"><img class="link" src="img/quick_restart.png" alt="restart">
+        </button>
+      </section>
+      <main class="container">
+        <ul class="deck">
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <div class="front">
+                <img src="#" class="back_img" alt="animal">
+              </div>
+            </div>
+          </li>
+        </ul>
+      </main>
+      <section class="winner_panel">
+        <div class="win_container">
+          <h2>Congratulations!</h2>
+          <p>Well done! You deserve to stroke a cat! ;)</p>
+          <br>
+          <p class="final_moves">24  moves</p>
+          <p>Stars:</p>
+          <ul class="starRating">
+            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star"></i></li>
+          </ul>
+          <br>
+          <p class="totalTime">Time 00:48</p>
+          <br>
+          <button type="button" class="play_again">PLAY AGAIN</button>
+        </div>
+      </section>
+      <footer class="page-footer">
+        <p class="copyright">© 2018 by <a class="link" href="https://www.linkedin.com/in/natalia-tyshchenko-b9287187/">nataly_kt</a></p>
+      </footer>
+    </div>
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
